# cppbind

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  test.sh
.github/workflows/: main.yml
example/: CMakeLists.txt
example/abc/: CMakeLists.txt  abc.pyi  myadd.cc  test.py
example/custom/: CMakeLists.txt  ReadMe.md  setup.py  test.py
example/custom/demo/: __init__.py
example/custom/demo/_capi/: lib.cc
example/ffi/: CMakeLists.txt  _ffi.cc  cint.cc  cppmap.cc  ffi.h  ffi.pyi  test.py
example/inheritance/: CMakeLists.txt  ext.cc  test.py
example/msan/: CMakeLists.txt  ReadMe.md  msan.cc  test.py
include/: CMakeLists.txt  cast.h  common.h  cppbind.h  object.h  stl.h  template.h  traceback.h
include/container/: bytes.h  dict.h  list.h  str.h  tuple.h
include/numeric/: bool.h  float.h  long.h  macro.h
include/package/: bind.h  enum.h  func.h  invoke.h  mod.h  modobj.h  type.h
script/: ci-check-fmt.sh  ci-init.sh  ci-lint-sh.sh  ci-test.sh  ci-tidy.sh  docs.sh  format.sh  gen-hdr.sh
src/: CMakeLists.txt  config.cmake.in  except.cc  static.cc  stl.cc
test/: CMakeLists.txt  dict_test.cc  except_test.cc  fini.c  invoke_test.cc  list_test.cc  num_test.cc  obj_test.cc  str_test.cc  tuple_test.cc
