file(GLOB_RECURSE CPPBIND_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

set(CPPBIND_AMALGAMATION_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/cppbind-sys.h")

add_custom_command(OUTPUT "${CPPBIND_AMALGAMATION_HEADER}"
  COMMAND sh script/gen-hdr.sh
  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../script/gen-hdr.sh" ${CPPBIND_HEADERS}
  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.."
)
set_source_files_properties("${CPPBIND_AMALGAMATION_HEADER}" PROPERTIES GENERATED TRUE)

add_library(empty OBJECT ${CPPBIND_AMALGAMATION_HEADER})

